Differentiate between trading currency and others

If the trading currency of a security has a smaller fraction than the
currencies of the other accounts in a transaction the values will be
truncated. This change fixes the problem by using the fraction
information from the account involved.

BUG: 396313
FIXED-IN: 5.1.2